--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
 <head>
-    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../HW-18-Work-page/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width= <device-width>, initial-scale=1.0">
     <title>Document</title>
@@ -10,7 +10,7 @@
 <body>
     <header class = "header">
         <div class="logo1">
-          <a href="#"><img src="..\My logo.png" alt="My logo" width="26.5" height="42">
+          <a href="#"><img src="../HW-18-Work-page/My logo.png" alt="My logo" width="26.5" height="42">
             
     </a>
         </div>
@@ -28,7 +28,7 @@
 <section class="myWork">
     <h1>My Work</h1>
     <div class="workGrid">
-        <div class="NP-Image"><img src="../Home – 5.jpg" alt="IA and UI Navigation"></div>
+        <div class="NP-Image"><img src="../HW-18-Work-page/Home – 5.jpg" alt="IA and UI Navigation"></div>
         <div class="NP-title"><h4>IA and UI Navigation </h4>
             <p>To design new information architecture (IA) for your non profit agency website. 
             We worked in four stages: First, we analyze the site navigation, perform a card sorting 
@@ -36,7 +36,7 @@
             Finally, we designed new navigation for your non profit site, also in Adobe XD.</p>
             <button></button>
         </div>
-        <div class="RX-Image"><img src="../RX.jpg" alt="RX Mobile App "></div>
+        <div class="RX-Image"><img src="../HW-18-Work-page/RX.jpg" alt="RX Mobile App "></div>
         <div class="RX-title"><h4>RX Mobile Ap</h4>
               <p>Our group designed an app to fill the gaps we found in prescription management.
                 Making the application more user friendly to help patients to track their prescriptions 
@@ -44,7 +44,7 @@
                  idea of the capabilities of the application.</p>
                  <button></button>
                 </div>
-        <div class="T-Image"><img src="../Travel app 3.jpg" alt="Travel App"></div>
+        <div class="T-Image"><img src="../HW-18-Work-page/Travel app 3.jpg" alt="Travel App"></div>
         <div class="T-title"><h4>Travel App</h4><p>In a group we did researched a way to optimize userers 
             interaction with a traveling app. This app is interactive with notifications 
             and messaging features that alowes other app users to communicat and plan trips together. </p>
@@ -55,7 +55,7 @@
 
     <footer class = "header">
         <div class="logo1">
-          <a href="#"><img src="..\My logo.png" alt="My logo" width="26.5" height="42">
+          <a href="#"><img src="../HW-18-Work-page/My logo.png" alt="My logo" width="26.5" height="42">
             
     </a>
         </div>
